--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "sync-server",
+  "name": "syncfhamsextension",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.8.3"
   }
 }
