--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "syncfhamsextension",
+  "name": "sync-server",
   "version": "1.0.0",
+  "description": "SyncFhams Server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "socket.io": "^4.8.3"
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2"
   }
 }
